feat: Finalize project name to FusionText and update project plan
- Updates the project name from "Stereo Reader" to "FusionText" in manifest.json and popup.html.
- Adds a note to Task 4.1 in project-plan.md to guide future testing efforts, focusing on dynamic content and the need for a MutationObserver.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Stereo Reader",
+  "name": "FusionText",
   "version": "1.0",
   "description": "A tool for vision therapy by selectively coloring text.",
   "permissions": [
